Add comment to test Angular 21 version in working hours section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,7 @@
         <div class="working-hours">
           <strong>Within Working Hours:</strong>
           <!-- TODO: Replace 'Loading...' with @if block using isWithinWorkingHours() -->
+           <!-- Test the angular 21 version -->
           Loading...
         </div>
       </div>
